<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <POU Name="ConfigMassenstromsensor" Id="{52b384ce-caf4-4982-bf28-42a525628c31}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ConfigMassenstromsensor
VAR
	state : INT := 1;
	
	baudrate_neu:	 	LINT;
	baudrate_alt:	 	LINT;
	baudrate_lilendian: LINT;
	
	ModbusAdresse_alt: 	 BYTE := 12;	//Massenstromsensor hat die default-Adresse 1
	ModbusAddress_neu: 	 BYTE := 12; //Massenstromsensor hat die Adresse 12 im ModbusRTU
	
	Parity_alt: 			ARRAY[0..1]OF BYTE ;
	Parity_neu:				ARRAY[0..1]OF BYTE := [3,0];
	
	RegisterFormat_alt:			ARRAY[0..1]OF BYTE :=[1, 0]; // in Big Endian
	RegisterFormat_neu:			ARRAY[0..1]OF BYTE :=[0, 0]; // in Big Endian
	
	
	

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE MODBUS.Status_Modbus OF

ConfigMSS:
	
	CASE state OF
		
		1:
		
		MODBUS.myModbus.ReadRegs( 		 
			UnitID:= ModbusAdresse_alt,
 			 Quantity:= 2,
 			 MBAddr:= 50000,						
 			 cbLength:= SIZEOF(baudrate_alt),
 			 pMemoryAddr:= ADR(baudrate_alt),
  			Execute:= TRUE,
  			Timeout:= modbusTimeout,
  			Busy => isModbusBusy,
  			Error => isModbusError,
  			ErrorId => modbusErrorId
  			(* cbRead parameter *));
			
		
		IF NOT isModbusBusy THEN
				MODBUS.myModbus.ReadRegs(Execute:= FALSE);
				IF MODBUS.myModbus.Error THEN
				state := 1;
				ELSE
				state := 1;	
			END_IF
		END_IF
		
		baudrate_lilendian:= BE32_TO_HOST(LINT_TO_DWORD( baudrate_alt));
		
(*
	2:
		MODBUS.myModbus.WriteRegs( 		 
			UnitID:= ModbusAdresse,
 			Quantity:= 2,
 			MBAddr:= 50004,						
 			cbLength:= SIZEOF(baudrate_alt),
 			pMemoryAddr:= ADR(baudrate_alt),
  			Execute:= TRUE,
  			Timeout:= modbusTimeout,
  			Busy => isModbusBusy,
  			Error => isModbusError,
  			ErrorId => modbusErrorId
  			(* cbRead parameter *));
			
		
		IF NOT isModbusBusy THEN
				MODBUS.myModbus.WriteRegs(Execute:= FALSE);
				IF MODBUS.myModbus.Error THEN
				state := 1;
				ELSE
				state := 32;	
			END_IF
		END_IF
*)
		
	END_CASE
	
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>